--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     background: #F1F1F1;
 }
 
+/* Header */
+
 .header {
     width: 100%;
     height: 100px;
@@ -62,6 +64,8 @@ body {
     
 }
 
+/* Banner */
+
 .banner {
     width: 100%;
     height: 70vh;
@@ -85,6 +89,8 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+/* Sobre nós */
 
 .sobreNos{
     margin: 0px;
@@ -130,6 +136,7 @@ body {
     width: 40px;
     height: 40px;
     padding: 8px 9px;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -145,11 +152,3 @@ body {
     font-weight: 600;
 }
 
-/* img {
-    width: 1280px;
-    height: 721px;
-    position: absolute;
-    top: 99px;
-    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
-    filter: grayscale(0%);
-} */
