--- a/login_cadastro.css
+++ b/login_cadastro.css
@@ -30,9 +30,19 @@ body {
 .inputs .container .formulario .formLogin {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 10% ;
     height: 250px;
+    gap: 64px;
+}
+
+.inputs .container .formulario .formCadastro {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 10% ;
+    height: 250px;
+    gap: 32px;
 }
 
 .inputs .container .formulario .navbar .loginBtn button{
@@ -40,6 +50,7 @@ body {
     border: none;
     color: #FEFDFD;
     font-size: 36px;
+    cursor: pointer;
 }
 
 .inputs .container .formulario .navbar .cadastroBtn button{
@@ -47,6 +58,7 @@ body {
     border: none;
     color: #FEFDFD;
     font-size: 36px;
+    cursor: pointer;
 }
 
 .inputs .container .formulario .formLogin input {
@@ -57,7 +69,7 @@ body {
 }
 
 .imagem {
-    background: url(imagens/Messi-copa.jpg);
+    background: url(imagens/Messi-copa.webp);
     width: 60vw;
     background-size: cover;
     background-position: center;
@@ -65,4 +77,32 @@ body {
 
 .page {
     display: flex;
+}
+
+.inputs .container .formulario .formLogin button {
+    background: #1F1F1F;
+    border-radius: 10px;
+    color: white;
+    padding: 17px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.inputs .container .formulario .formCadastro input {
+    background: transparent;
+    padding: 20px 25px;
+    border: 1px solid white;
+    border-radius: 10px;
+    color: white;
+}
+
+.inputs .container .formulario .formCadastro button {
+    background: #1F1F1F;
+    border-radius: 10px;
+    color: white;
+    padding: 17px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
 }
