--- a/style.css
+++ b/style.css
@@ -152,3 +152,40 @@ body {
     font-weight: 600;
 }
 
+/* Login/Cadastro */
+
+.inputs {
+    background-color: #303030;
+    width: 30vw;
+    height: 100vh;
+}
+
+.inputs .container {
+    width: 80%;
+    margin: 0 10%;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+}
+
+.inputs .container .logo {
+    display: flex;
+    align-items: center;
+}
+
+.inputs .container .navbar {
+    list-style: none;
+}
+
+.inputs .container .navbar li {
+    display: inline;
+    padding: 0px 15px;
+    color: #FFF;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal; 
+    padding: 8px 16px;
+    border-radius: 4px;
+}
