--- a/login_cadastro.css
+++ b/login_cadastro.css
@@ -6,7 +6,7 @@ body {
 
 .inputs {
     background: #303030;
-    width: 40vw;
+    width: 30vw;
     height: 100%;
 }
 
@@ -24,16 +24,15 @@ body {
 .inputs .container .formulario .navbar {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 10%;
 }
 
 .inputs .container .formulario .formLogin {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin-top: 10% ;
-    height: 250px;
-    gap: 64px;
+    margin-top: 30% ;
+    height: 400px;
+    gap: 48px;
 }
 
 .inputs .container .formulario .formCadastro {
@@ -41,6 +40,15 @@ body {
     flex-direction: column;
     justify-content: space-between;
     margin-top: 10% ;
+    height: 250px;
+    gap: 32px;
+}
+
+.inputs .container .formulario .formCadastroEndereco {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 10%;
     height: 250px;
     gap: 32px;
 }
@@ -61,16 +69,39 @@ body {
     cursor: pointer;
 }
 
-.inputs .container .formulario .formLogin input {
+/* .inputs .container .formulario .formLogin input {
     background: transparent;
     padding: 20px 25px;
     border: 1px solid white;
     border-radius: 10px;
+} */
+
+.inputs .container .formulario .formLogin button {
+    padding: 10px;
+    border-radius: 10px;
+    width: 100%;
+    background: #1f1f1f;
+    color: #f0f0f0;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
 }
 
+.inputs .container .formulario .formCadastro button {
+    padding: 10px;
+    border-radius: 10px;
+    width: 100%;
+    background: #1f1f1f;
+    color: #f0f0f0;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+}
+
+
 .imagem {
-    background: url(imagens/Messi-copa.webp);
-    width: 60vw;
+    background: url(imagens/Messi-copa.jpg);
+    width: 70vw;
     background-size: cover;
     background-position: center;
 }
@@ -79,30 +110,64 @@ body {
     display: flex;
 }
 
-.inputs .container .formulario .formLogin button {
-    background: #1F1F1F;
-    border-radius: 10px;
-    color: white;
-    padding: 17px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
+.controleFormulario {
+    /* padding-bottom: 20px; */
+    position: relative;
 }
 
-.inputs .container .formulario .formCadastro input {
-    background: transparent;
-    padding: 20px 25px;
-    border: 1px solid white;
-    border-radius: 10px;
-    color: white;
+.controleFormulario label {
+    display: inline-block;
+    font-size: 16px;
+    font-family: sans-serif;
+    margin-bottom: 14px;
+    color: #f0f0f0;
 }
 
-.inputs .container .formulario .formCadastro button {
-    background: #1F1F1F;
+.controleFormulario input {
+    /* background: transparent; */
+    border: 2px solid #f0f0f0;
+    display: block;
     border-radius: 10px;
-    color: white;
-    padding: 17px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
+    font-size: 14px;
+    width: 100%;
+    padding: 10px;
+}
+
+.controleFormulario i {
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    visibility: hidden;
+}
+
+.controleFormulario small {
+    /* position: absolute;
+    bottom: 0;
+    left: 0; */
+    visibility: hidden;
+}
+
+/* Erro e sucesso */
+
+.controleFormulario.sucesso input {
+    border-color: #2ecc71;
+}
+
+.controleFormulario.erro input {
+    border-color: #e74c3c;
+}
+
+.controleFormulario.sucesso i.fa-circle-check {
+    visibility: visible;
+    color: #2ecc71;
+}
+
+.controleFormulario.erro i.fa-circle-exclamation {
+    visibility: visible;
+    color: #e74c3c;
+}
+
+.controleFormulario.erro small {
+    visibility: visible;
+    color: #e74c3c;
 }
