Organizei o projeto em diretorios especificos

--- a/public/css/login_cadastro.css
+++ b/public/css/login_cadastro.css
@@ -110,7 +110,7 @@ body {
 }
 
 .imagem {
-    background: url(imagens/Messi-copa.jpg);
+    background: url(../imagens/Messi-copa.jpg);
     width: 70vw;
     background-size: cover;
     background-position: center;
