--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -62,6 +62,8 @@ body {
     height: 100%;
     background-color: #303030;
     color: #f0f0f0;
+    position: fixed;
+    width: 266px;
 }
 
 .img-icone {
@@ -156,4 +158,21 @@ body {
 
 .card-inner > span {
     font-size: 35px;
+}
+
+.main-conteudo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    height: 500px;
+}
+
+.main-grafico {
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    width: 39vw;
+    height: 80%;
 }
