--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -173,19 +173,19 @@ body {
     border: 1px solid #d2d2d3;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-    width: 39vw;
-    height: 80%;
+    width: 40vw;
+    height: 500px;
 }
 
 .main-detalhe {
-    background-color: #ffffff;
+    /* background-color: #ffffff;
     box-sizing: border-box;
-    border: 1px solid #d2d2d3;
+    
     border-radius: 5px;
-    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2); */
     width: 39vw;
     height: 80%;
-    max-height: 80%;
+    height: 500px;
     display: flex;
 }
 
@@ -210,6 +210,7 @@ body {
 .main-estatisticas {
     overflow: hidden;
     overflow-y: scroll;
-    max-height: 400px;
-    width: 200px;
+    
+    max-height: 500px;
+
 }
