--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -163,7 +163,7 @@ body {
 .main-conteudo {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 15px;
     height: 500px;
 }
 
@@ -173,8 +173,22 @@ body {
     border: 1px solid #d2d2d3;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-    width: 40vw;
+    width: 39vw;
     height: 500px;
+}
+
+.main-grafico-canvas {
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    width: 39vw;
+    height: 500px;
+    padding: 10% 0 10% 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .main-detalhe {
@@ -193,7 +207,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 60%;
     height: 100%;
 }
 
