--- a/web-data-viz/site/public/css/dashboard.css
+++ b/web-data-viz/site/public/css/dashboard.css
@@ -5,9 +5,27 @@ body {
     font-family: sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: #FFF;
+    /* padding: 8px 16px;
+    border-radius: 4px;
+    display: inline-block; */
+    /* border-bottom: 1px solid transparent; */
+}
+
+.gridContainer .sidebar ul li a {
+    display: flex;
+    gap: 24px;
+}
+
 .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
+}
+
+.fa-solid {
+    vertical-align: middle;
 }
 
 .text-primary {
@@ -124,7 +142,7 @@ body {
 
 .main-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     margin: 20px 0;
 }
@@ -175,6 +193,21 @@ body {
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
     width: 39vw;
     height: 500px;
+}
+
+.container {
+    width: 90%;
+    margin: 0 5% 0 5%;
+}
+
+.main-grafico h1 {
+    display: flex;
+    justify-content: center;
+}
+
+.main-atributos {
+    width: 100%;
+    height: 350px;
 }
 
 .main-grafico-canvas {
@@ -324,7 +357,11 @@ table {
     width: 100%;
 }
 
-table, th, td{
+table, td{
     border: 1px solid #303030;
     border-collapse: collapse;
+}
+
+.header-tabela {
+    position: sticky;
 }
