--- a/web-data-viz/site/public/css/dashboard.css
+++ b/web-data-viz/site/public/css/dashboard.css
@@ -205,10 +205,7 @@ a {
     justify-content: center;
 }
 
-.main-atributos {
-    width: 100%;
-    height: 350px;
-}
+
 
 .main-grafico-canvas {
     background-color: #ffffff;
@@ -364,4 +361,176 @@ table, td{
 
 .header-tabela {
     position: sticky;
+}
+
+/* Estilo da area de perfil */
+
+.container-infos {
+    display: flex;
+    /* flex-direction: column; */
+    height: 80%;
+    gap: 20%;
+    width: 80%;
+    margin: 0 10% 0 10%;
+}
+
+.cards-infos {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+    gap: 13%;
+    justify-content: center;
+}
+
+.cards-wrap {
+    flex-wrap: wrap;
+    width: 160px;
+}
+
+.cards-infos input {
+    border: none;
+    font-weight: 700;
+    color: #303030;
+}
+
+.cards-infos span {
+    font-weight: 400;
+    color: rgba(153, 152, 152, 0.7);
+}
+
+.main-carta {
+    width: 250px;
+    height: 80%;
+    background: url(../assets/imagens/fundo-carta-legend.png);
+    background-size: cover;
+    background-position: center center;
+    border: none;
+    border-radius: 5px;
+}
+
+.main-carta-atributos {
+    width: 60%;
+    height: 80%;
+}
+
+.main-atributos {
+    width: 80%;
+    margin: 10% 10% 0 10%;
+    height: 350px;
+    display: flex;
+    gap: 10%;
+}
+
+.main-atributos .main-carta .foto {
+    width: 60%;
+    margin: 20% 20% 0 20%;
+    background-color: transparent;
+    height: 100px;
+    justify-content: left;
+}
+
+.main-atributos .main-carta .foto .over {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-atributos .main-carta .foto .overall {
+    font-weight: 700;
+    font-size: 32px;
+}
+
+.main-atributos .main-carta .foto .posicao {
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.main-atributos .main-carta .atributos {
+    width: 80%;
+    margin: 0 10% 10% 10%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.main-atributos .main-carta span {
+    display: flex;
+    justify-content: center;
+    margin: 5% 0 0;
+    font-size: 14px;
+    /* border-bottom: 2px solid rgba(102, 102, 102, 0.5); */
+}
+
+.main-atributos .main-carta .atributos .esquerda {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+    /* border-right: 2px solid rgba(102, 102, 102, 0.5); */
+    width: 40%;
+}
+
+.main-atributos .main-carta .atributos .direita {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+    /* border-right: 2px solid rgba(102, 102, 102, 0.5); */
+    width: 40%;
+}
+
+.main-atributos .main-carta .atributos .esquerda .atributo {
+    display: flex;
+    justify-content: space-around;
+    margin-right: 5px;
+}
+
+.main-atributos .main-carta .atributos .direita .atributo {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 5px;
+}
+
+.main-carta-atributos .cabeçalho {
+    display: flex;
+    justify-content: center;
+    height: 10%;
+}
+
+.main-carta-atributos .pontos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 90%;
+    width: 100%;
+}
+
+.main-carta-atributos .pontos .esquerda {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 50%;
+}
+
+.main-carta-atributos .pontos .direita {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 50%;
+}
+
+.main-grafico .cadastrar {
+    width: 80%;
+    margin: 0 10%;
+    height: 80%;
+}
+
+.main-grafico .cadastrar .formulario-atributos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    /* width: 80%;
+    margin: 10%; */
+    height: 60%;
 }
