Adicionei uma foto a carta do jogador

--- a/web-data-viz/site/public/css/dashboard.css
+++ b/web-data-viz/site/public/css/dashboard.css
@@ -424,6 +424,9 @@ table, td{
 .main-atributos .main-carta .foto {
     width: 60%;
     margin: 20% 20% 0 20%;
+    background: url(../assets/imagens/messi-novo-carta.png);
+    background-size: cover;
+    background-position: center center;
     background-color: transparent;
     height: 100px;
     justify-content: left;
