--- a/web-data-viz/site/public/css/minha-carreira.css
+++ b/web-data-viz/site/public/css/minha-carreira.css
@@ -254,10 +254,10 @@ a {
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
     width: 39vw;
     height: 500px;
-    padding: 10% 0 10% 0;
+    /* padding: 10% 0 10% 0; */
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .main-detalhe {
